# dbt-f1

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
models/staging/: sources.yml  stg_f1_data__circuits.sql  stg_f1_data__constructor_results.sql  stg_f1_data__constructor_standings.sql  stg_f1_data__constructors.sql  stg_f1_data__driver_standings.sql  stg_f1_data__drivers.sql  stg_f1_data__lap_times.sql  stg_f1_data__pit_stops.sql  stg_f1_data__qualifying.sql  stg_f1_data__races.sql  stg_f1_data__results.sql  stg_f1_data__seasons.sql  stg_f1_data__sprint_results.sql  stg_f1_data__status.sql
