[project]
name = "dbt-f1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "turntable-justin", email = "122627527+turntable-justin@users.noreply.github.com" },
]
dependencies = ["dbtx>=0.0.3"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "harlequin>=1.24.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
